fix: the inline-truncation should only work as a direct children of x-text

--- a/packages/web-platform/web-elements/src/elements/XText/x-text.css
+++ b/packages/web-platform/web-elements/src/elements/XText/x-text.css
@@ -12,7 +12,8 @@ x-text {
   color: initial;
 }
 
-x-text > x-text, x-text > lynx-wrapper > x-text {
+x-text > x-text,
+x-text > lynx-wrapper > x-text {
   color: inherit;
 }
 
@@ -33,11 +34,17 @@ x-text > x-text::part(inner-box),
 x-text > lynx-wrapper > x-text::part(inner-box) {
   display: contents !important;
 }
-x-text::part(inner-box), inline-text, x-text::part(slot) {
+
+x-text::part(inner-box),
+inline-text,
+x-text::part(slot) {
   background-clip: inherit;
   -webkit-background-clip: inherit;
 }
-inline-text, inline-image, inline-truncation {
+
+inline-text,
+inline-image,
+inline-truncation {
   display: none;
 }
 
@@ -73,15 +80,19 @@ inline-text > lynx-wrapper > inline-image,
 inline-text > lynx-wrapper > x-image {
   display: contents !important;
 }
-x-text > x-view, x-text > lynx-wrapper > x-view {
+
+x-text > x-view,
+x-text > lynx-wrapper > x-view {
   display: inline-flex !important;
 }
+
 x-text > x-view,
 x-text[x-show-inline-truncation] > inline-truncation,
 x-text > lynx-wrapper > x-view,
 x-text[x-show-inline-truncation] > lynx-wrapper > inline-truncation {
   display: inline-flex;
 }
+
 x-text > inline-truncation:first-child,
 x-text > lynx-wrapper > inline-truncation:first-child {
   max-width: 100%;
@@ -125,7 +136,10 @@ inline-truncation > lynx-wrapper > x-image::part(img) {
 
 /* attribute text-selection */
 
-x-text, inline-text, inline-image, inline-truncation {
+x-text,
+inline-text,
+inline-image,
+inline-truncation {
   -webkit-user-select: none;
   user-select: none;
 }
@@ -154,6 +168,7 @@ x-text[text-selection] > lynx-wrapper > inline-truncation {
   -webkit-user-select: auto;
   user-select: auto;
 }
+
 x-text[x-text-clipped] > [x-text-clipped]:not(inline-truncation),
 x-text[x-text-clipped]
   > lynx-wrapper
@@ -166,9 +181,9 @@ x-text[x-text-clipped]:not([tail-color-convert="false"])::part(inner-box)::after
   content: "...";
 }
 
-x-text[x-text-clipped]:has(inline-truncation)::part(inner-box):after,
+x-text[x-text-clipped]:has(> inline-truncation)::part(inner-box):after,
 x-text[x-text-clipped][x-text-custom-overflow]::part(inner-box):after,
-x-text[x-text-clipped]:has(inline-truncation)::part(inner-box)::after,
+x-text[x-text-clipped]:has(> inline-truncation)::part(inner-box)::after,
 x-text[x-text-clipped][x-text-custom-overflow]::part(inner-box)::after {
   content: "" !important;
 }
@@ -198,41 +213,45 @@ x-text[text-maxline="0"] {
   display: none;
 }
 
-@supports not selector(:has(inline-truncation)) {
+@supports not selector(:has(> inline-truncation)) {
   x-text[text-maxline="1"]:not([tail-color-convert="false"]):not([x-text-custom-overflow])::part(inner-box) {
     white-space: nowrap;
     text-overflow: ellipsis;
   }
 }
 
-@supports selector(:has(inline-truncation)) {
+@supports selector(:has(> inline-truncation)) {
   /* text-wrap  chrome 114, firefox 121, safari 17.4*/
-  x-text[text-maxline="1"]:not([tail-color-convert="false"], :has(inline-truncation))::part(inner-box) {
+  x-text[text-maxline="1"]:not([tail-color-convert="false"], :has(> inline-truncation))::part(inner-box) {
     text-wrap: nowrap;
     white-space: nowrap;
     text-overflow: ellipsis;
   }
 }
+
 x-text[text-maxline="1"] {
   /* This is the stretch size */
   /* https://developer.mozilla.org/en-US/docs/Web/CSS/max-width */
   max-width: -moz-available;
   max-width: -webkit-fill-available;
 }
+
 x-text[text-maxline="1"]:not([tail-color-convert="false"])::part(inner-box) {
   display: block;
 }
 
 x-text[text-maxline][x-text-custom-overflow]::part(inner-box),
-x-text[text-maxline]:has(inline-truncation)::part(inner-box),
+x-text[text-maxline]:has(> inline-truncation)::part(inner-box),
 x-text[text-maxline][tail-color-convert="false"]::part(inner-box) {
   display: block !important;
 }
 
 raw-text {
-  display: none; /* raw-text only works in x-text */
+  display: none;
+  /* raw-text only works in x-text */
   white-space-collapse: preserve-breaks;
 }
+
 x-text > raw-text,
 inline-text > raw-text,
 x-text > lynx-wrapper > raw-text,
